Domain meta data fix

--- a/public/index.html
+++ b/public/index.html
@@ -8,14 +8,14 @@
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://agentornot.ai/">
+    <meta property="og:url" content="https://agentornot.com/">
     <meta property="og:title" content="AI Agent or Not! - Test Your Product's True Agenticity">
     <meta property="og:description" content="Get a brutally honest analysis of how 'agentic' your AI product really is, scored by GPT-4 and Claude on key agent characteristics.">
     <meta property="og:image" content="/og-image.jpg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://agentornot.ai/">
+    <meta property="twitter:url" content="https://agentornot.com/">
     <meta property="twitter:title" content="AI Agent or Not! - Test Your Product's True Agenticity">
     <meta property="twitter:description" content="Get a brutally honest analysis of how 'agentic' your AI product really is, scored by GPT-4 and Claude on key agent characteristics.">
     <meta property="twitter:image" content="/og-image.jpg">
